[package]
name = "dbc-bench"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[dependencies]
array-bytes = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
dbc-primitives = { path = "../primitives" }
dbc-testing = { path = "../testing" }
dbc-runtime = { path = "../runtime" }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true }
sp-state-machine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
kvdb = "0.13.0"
kvdb-rocksdb = "0.19.0"
sp-trie = { workspace = true }
sp-core = { workspace = true }
sp-consensus = { workspace = true }
sc-basic-authorship = { workspace = true }
sp-inherents = { workspace = true }
sp-timestamp = { workspace = true }
sp-tracing = { workspace = true }
hash-db = "0.15.2"
tempfile = "3.1.0"
fs_extra = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-db = "0.4.2"
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
futures = { version = "0.3.21", features = ["thread-pool"] }
