[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Tests for the in-browser light client.'
edition = '2018'
license = 'Apache-2.0'
name = 'node-browser-testing'
version = '2.0.0'

[dependencies]
futures = '0.3.9'
futures-timer = '3.0.2'
jsonrpc-core = '15.0.0'
serde = '1.0.106'
serde_json = '1.0.48'
wasm-bindgen-futures = '0.4.18'
wasm-bindgen-test = '0.3.18'
libp2p = { version = '0.34.0', default-features = false }
node-cli = { path = '../cli', version = '2.0.0', default-features = false, features = ['browser'] }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353' }
wasm-bindgen = { version = '=0.2.69', features = ['serde-serialize'] }
