[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
default-run = 'substrate'
description = 'Generic Substrate node implementation in Rust.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
name = 'node-cli'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = 'substrate'
path = 'bin/main.rs'
required-features = ['cli']

[dependencies]
hex-literal = '0.3.1'
log = '0.4.8'
parking_lot = '0.11.1'
rand = '0.7.2'

[dependencies.browser-utils]
git = 'https://github.com/paritytech/substrate.git'
optional = true
package = 'substrate-browser-utils'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.codec]
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.frame-system]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.futures]
features = ['compat']
version = '0.3.9'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.node-executor]
path = '../executor'
version = '2.0.0'

[dependencies.node-inspect]
optional = true
path = '../inspect'
version = '0.8.0'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.node-rpc]
path = '../rpc'
version = '2.0.0'

[dependencies.node-runtime]
path = '../runtime'
version = '2.0.0'

[dependencies.pallet-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-balances]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '2.0.0'

[dependencies.pallet-grandpa]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-im-online]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-indices]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-staking]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-client-db]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-consensus-slots]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-finality-grandpa-warp-sync]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.8.0'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-offchain]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-service]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.serde]
features = ['derive']
version = '1.0.102'

[dependencies.sp-authority-discovery]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-keyring]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.structopt]
optional = true
version = '0.3.8'

[dependencies.wasm-bindgen]
optional = true
version = '0.2.57'

[dependencies.wasm-bindgen-futures]
optional = true
version = '0.4.18'

[features]
browser = [
    'browser-utils',
    'wasm-bindgen',
    'wasm-bindgen-futures',
]
cli = [
    'node-executor/wasmi-errno',
    'node-inspect',
    'sc-cli',
    'frame-benchmarking-cli',
    'substrate-frame-cli',
    'sc-service/db',
    'sc-finality-grandpa-warp-sync',
    'structopt',
    'substrate-build-script-utils',
]
default = ['cli']
runtime-benchmarks = [
    'node-runtime/runtime-benchmarks',
    'frame-benchmarking-cli',
]

[dev-dependencies]
assert_cmd = '1.0'
futures = '0.3.9'
nix = '0.19'
platforms = '1.1'
regex = '1'
serde_json = '1.0'
tempfile = '3.1.0'

[dev-dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dev-dependencies.sc-consensus-babe]
features = ['test-helpers']
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dev-dependencies.sc-consensus-epochs]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[dev-dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dev-dependencies.sc-service-test]
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '2.0.0'
[target."cfg(target_arch=\"x86_64\")".dependencies.node-executor]
features = ['wasmtime']
path = '../executor'
version = '2.0.0'

[target."cfg(target_arch=\"x86_64\")".dependencies.sc-cli]
features = ['wasmtime']
optional = true
path = '../../../client/cli'
version = '0.9.0'

[target."cfg(target_arch=\"x86_64\")".dependencies.sc-service]
default-features = false
features = ['wasmtime']
path = '../../../client/service'
version = '0.9.0'

[target."cfg(target_arch=\"x86_64\")".dependencies.sp-trie]
default-features = false
features = ['memory-tracker']
path = '../../../primitives/trie'
version = '3.0.0'
[build-dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[build-dependencies.node-inspect]
optional = true
path = '../inspect'
version = '0.8.0'

[build-dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
package = 'sc-cli'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '0.9.0'

[build-dependencies.structopt]
optional = true
version = '0.3.8'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[build-dependencies.substrate-frame-cli]
git = 'https://github.com/paritytech/substrate.git'
optional = true
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'
[badges.is-it-maintained-issue-resolution]
repository = 'paritytech/substrate'

[badges.is-it-maintained-open-issues]
repository = 'paritytech/substrate'

[badges.maintenance]
status = 'actively-developed'

[badges.travis-ci]
repository = 'paritytech/substrate'

[lib]
crate-type = [
    'cdylib',
    'rlib',
]
